crates/keron-lang/tests/corpus/errors/check/for_loop_var_shadows_outer.keron
val x: Int = 0

val xs: List<Int> = [1, 2]

for x in xs {
  reconcile x
}
